# wowlauncher

./: .gitignore  App.tsx  GEMINI.md  README.md  SteamManager.ts  fileManager.ts  forge.config.ts  index.css  index.html  main.ts  package-lock.json  package.json  preload.ts  realmlistManager.ts  renderer.tsx  tsconfig.json  types.d.ts  vite.config.ts  webpack.main.config.ts  webpack.plugins.ts  webpack.rules.ts
src/: App.tsx  index.css  main.ts  preload.ts  renderer.tsx  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/main/: fileManager.ts
