[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
reqwest = "0.13.2"
zip = "4.2.0"
tokio = "1.50.0"
dirs = "6.0.0"
open = "5.3.3"
tauri-plugin-shell = "2.3.5"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-os = "2.3.2"
regex = "1.12"
